# AstroPI_PlateSolving

./: .gitignore  Cargo.toml  README.md
src/: consts.rs  coordinate.rs  lib.rs  main.rs  parse_catalog.rs  platesolve.rs  printing.rs  solver.rs  star_finding.rs  star_quads.rs  tests.rs
