[package]
name = "plate_solving"
version = "0.1.0"
edition = "2024"

[dependencies]
rawloader = "0.37" # Or the latest version available
image = "0.25"     # Or the latest version available
plotters = "0.3"
imageproc = "0.25.0"
tempfile = "3.20.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.33.2"
itertools = "0.14.0"
rayon = "1.10"
